@@ -2,11 +2,11 @@
  * 
  * DO NOT EDIT THIS FILE   (fixincl.x)
  * 
- * It has been AutoGen-ed  Tuesday September 15, 2009 at 06:55:13 AM CEST
+ * It has been AutoGen-ed  Tuesday October 20, 2009 at 04:21:49 PM PDT
  * From the definitions    inclhack.def
  * and the template file   fixincl
  */
-/* DO NOT SVN-MERGE THIS FILE, EITHER Di 15. Sep 06:55:13 CEST 2009
+/* DO NOT SVN-MERGE THIS FILE, EITHER Tue Oct 20 16:21:49 PDT 2009
  *
  * You must regenerate it.  Use the ./genfixes script.
  *
@@ -4082,11 +4082,7 @@ static tTestDesc aHpux_Stdint_Least_FastTests[] = {
  */
 static const char* apzHpux_Stdint_Least_FastPatch[] = {
     "format",
-    "#ifdef __LP64__\n\
-#  define\tUINT_%164_MAX\tULONG_MAX\n\
-#else\n\
-%0\n\
-#endif",
+    "#  define\tUINT_%164_MAX\t__UINT64_MAX__",
     (char*)NULL };
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
